Fix #520 Clean up Functional Modules