@@ -16,7 +16,6 @@ import static org.mockito.Mockito.when;
 
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import org.etools.j1939_84.bus.Packet;
 import org.etools.j1939_84.bus.j1939.BusResult;
@@ -141,12 +140,12 @@ public class SectionA5VerifierTest extends AbstractControllerTest {
     public void testVerifyDM12() {
 
         DM12MILOnEmissionDTCPacket dm12Packet = mock(DM12MILOnEmissionDTCPacket.class);
-        when(dm12Packet.getDtcs()).thenReturn(Collections.emptyList());
+        when(dm12Packet.getDtcs()).thenReturn(List.of());
         when(dm12Packet.getMalfunctionIndicatorLampStatus()).thenReturn(LampStatus.OFF);
 
-        when(dtcModule.requestDM12(any(), eq(true)))
-                .thenReturn(new RequestResult<>(false, Collections.singletonList(dm12Packet),
-                        Collections.emptyList()));
+        when(dtcModule.requestDM12(any()))
+                .thenReturn(new RequestResult<>(false, List.of(dm12Packet),
+                        List.of()));
 
         instance.setJ1939(j1939);
 
@@ -159,7 +158,7 @@ public class SectionA5VerifierTest extends AbstractControllerTest {
         verify(diagnosticReadinessModule).setJ1939(j1939);
 
         verify(dtcModule).setJ1939(j1939);
-        verify(dtcModule).requestDM12(any(), eq(true));
+        verify(dtcModule).requestDM12(any());
 
         verify(obdTestsModule).setJ1939(j1939);
 
@@ -170,12 +169,12 @@ public class SectionA5VerifierTest extends AbstractControllerTest {
     public void testVerifyDM12Fail() {
 
         DM12MILOnEmissionDTCPacket dm12Packet = mock(DM12MILOnEmissionDTCPacket.class);
-        when(dm12Packet.getDtcs()).thenReturn(Collections.emptyList());
+        when(dm12Packet.getDtcs()).thenReturn(List.of());
         when(dm12Packet.getMalfunctionIndicatorLampStatus()).thenReturn(LampStatus.FAST_FLASH);
 
-        when(dtcModule.requestDM12(any(), eq(true)))
-                .thenReturn(new RequestResult<>(false, Collections.singletonList(dm12Packet),
-                        Collections.emptyList()));
+        when(dtcModule.requestDM12(any()))
+                .thenReturn(new RequestResult<>(false, List.of(dm12Packet),
+                        List.of()));
 
         instance.setJ1939(j1939);
 
@@ -193,7 +192,7 @@ public class SectionA5VerifierTest extends AbstractControllerTest {
         verify(diagnosticReadinessModule).setJ1939(j1939);
 
         verify(dtcModule).setJ1939(j1939);
-        verify(dtcModule).requestDM12(any(), eq(true));
+        verify(dtcModule).requestDM12(any());
 
         verify(obdTestsModule).setJ1939(j1939);
 
@@ -205,12 +204,12 @@ public class SectionA5VerifierTest extends AbstractControllerTest {
 
         DM12MILOnEmissionDTCPacket dm12Packet = mock(DM12MILOnEmissionDTCPacket.class);
         DiagnosticTroubleCode dm12dtc = new DiagnosticTroubleCode(new int[] { 0x61, 0x02, 0x13, 0x81 });
-        when(dm12Packet.getDtcs()).thenReturn(Collections.singletonList(dm12dtc));
+        when(dm12Packet.getDtcs()).thenReturn(List.of(dm12dtc));
         when(dm12Packet.getMalfunctionIndicatorLampStatus()).thenReturn(LampStatus.FAST_FLASH);
 
-        when(dtcModule.requestDM12(any(), eq(true)))
-                .thenReturn(new RequestResult<>(false, Collections.singletonList(dm12Packet),
-                        Collections.emptyList()));
+        when(dtcModule.requestDM12(any()))
+                .thenReturn(new RequestResult<>(false, List.of(dm12Packet),
+                        List.of()));
 
         instance.setJ1939(j1939);
 
@@ -228,7 +227,7 @@ public class SectionA5VerifierTest extends AbstractControllerTest {
         verify(diagnosticReadinessModule).setJ1939(j1939);
 
         verify(dtcModule).setJ1939(j1939);
-        verify(dtcModule).requestDM12(any(), eq(true));
+        verify(dtcModule).requestDM12(any());
 
         verify(obdTestsModule).setJ1939(j1939);
 
@@ -242,13 +241,13 @@ public class SectionA5VerifierTest extends AbstractControllerTest {
     @Test
     public void testVerifyDM20() {
         DM20MonitorPerformanceRatioPacket dm20Packet = mock(DM20MonitorPerformanceRatioPacket.class);
-        when(diagnosticReadinessModule.requestDM20(any(), eq(true)))
-                .thenReturn(new RequestResult<>(false, Collections.singletonList(dm20Packet),
-                        Collections.emptyList()));
+        when(diagnosticReadinessModule.requestDM20(any()))
+                .thenReturn(new RequestResult<>(false, List.of(dm20Packet),
+                        List.of()));
 
         instance.setJ1939(j1939);
 
-        assertTrue(instance.verifyDM20(Collections.singletonList(dm20Packet),
+        assertTrue(instance.verifyDM20(List.of(dm20Packet),
                 listener));
 
         assertEquals("PASS: Section A.5 Step 7.a DM20 Verification", listener.getMessages());
@@ -256,7 +255,7 @@ public class SectionA5VerifierTest extends AbstractControllerTest {
         assertEquals("", listener.getResults());
 
         verify(diagnosticReadinessModule).setJ1939(j1939);
-        verify(diagnosticReadinessModule).requestDM20(any(), eq(true));
+        verify(diagnosticReadinessModule).requestDM20(any());
 
         verify(dtcModule).setJ1939(j1939);
 
@@ -273,13 +272,13 @@ public class SectionA5VerifierTest extends AbstractControllerTest {
     public void testVerifyDM20Fail() {
         DM20MonitorPerformanceRatioPacket dm20Packet = mock(DM20MonitorPerformanceRatioPacket.class);
         when(dm20Packet.toString()).thenReturn("dm20Packet.toString()");
-        when(diagnosticReadinessModule.requestDM20(any(), eq(true)))
-                .thenReturn(new RequestResult<>(false, Collections.singletonList(dm20Packet),
-                        Collections.emptyList()));
+        when(diagnosticReadinessModule.requestDM20(any()))
+                .thenReturn(new RequestResult<>(false, List.of(dm20Packet),
+                        List.of()));
 
         instance.setJ1939(j1939);
 
-        assertFalse(instance.verifyDM20(Collections.emptyList(),
+        assertFalse(instance.verifyDM20(List.of(),
                 listener));
 
         String expectedMessages = "Section A.5 verification failed during DM20 check done at table step 7.a" + NL
@@ -290,7 +289,7 @@ public class SectionA5VerifierTest extends AbstractControllerTest {
         assertEquals("", listener.getResults());
 
         verify(diagnosticReadinessModule).setJ1939(j1939);
-        verify(diagnosticReadinessModule).requestDM20(any(), eq(true));
+        verify(diagnosticReadinessModule).requestDM20(any());
 
         verify(dtcModule).setJ1939(j1939);
 
@@ -307,7 +306,7 @@ public class SectionA5VerifierTest extends AbstractControllerTest {
     public void testVerifyDM21() {
         DM21DiagnosticReadinessPacket dm21Packet = mock(DM21DiagnosticReadinessPacket.class);
         when(dtcModule.requestDM21(any()))
-                .thenReturn(new RequestResult<>(false, Collections.singletonList(dm21Packet), Collections.emptyList()));
+                .thenReturn(new RequestResult<>(false, List.of(dm21Packet), List.of()));
         instance.setJ1939(j1939);
 
         assertTrue(instance.verifyDM21(listener));
@@ -335,7 +334,7 @@ public class SectionA5VerifierTest extends AbstractControllerTest {
         DM21DiagnosticReadinessPacket dm21Packet = mock(DM21DiagnosticReadinessPacket.class);
         when(dm21Packet.getMinutesWhileMILIsActivated()).thenReturn(15.0);
         when(dtcModule.requestDM21(any()))
-                .thenReturn(new RequestResult<>(false, Collections.singletonList(dm21Packet), Collections.emptyList()));
+                .thenReturn(new RequestResult<>(false, List.of(dm21Packet), List.of()));
         instance.setJ1939(j1939);
 
         assertFalse(instance.verifyDM21(listener));
@@ -369,7 +368,7 @@ public class SectionA5VerifierTest extends AbstractControllerTest {
         DM21DiagnosticReadinessPacket dm21Packet = mock(DM21DiagnosticReadinessPacket.class);
         when(dm21Packet.getKmWhileMILIsActivated()).thenReturn(15.0);
         when(dtcModule.requestDM21(any()))
-                .thenReturn(new RequestResult<>(false, Collections.singletonList(dm21Packet), Collections.emptyList()));
+                .thenReturn(new RequestResult<>(false, List.of(dm21Packet), List.of()));
         instance.setJ1939(j1939);
 
         assertFalse(instance.verifyDM21(listener));
@@ -403,7 +402,7 @@ public class SectionA5VerifierTest extends AbstractControllerTest {
         DM21DiagnosticReadinessPacket dm21Packet = mock(DM21DiagnosticReadinessPacket.class);
         when(dm21Packet.getMinutesSinceDTCsCleared()).thenReturn(15.0);
         when(dtcModule.requestDM21(any()))
-                .thenReturn(new RequestResult<>(false, Collections.singletonList(dm21Packet), Collections.emptyList()));
+                .thenReturn(new RequestResult<>(false, List.of(dm21Packet), List.of()));
         instance.setJ1939(j1939);
 
         assertFalse(instance.verifyDM21(listener));
@@ -438,8 +437,8 @@ public class SectionA5VerifierTest extends AbstractControllerTest {
         DM23PreviouslyMILOnEmissionDTCPacket dm23Packet = mock(DM23PreviouslyMILOnEmissionDTCPacket.class);
         when(dm23Packet.getMalfunctionIndicatorLampStatus()).thenReturn(LampStatus.OFF);
 
-        when(dtcModule.requestDM23(any(), eq(true)))
-                .thenReturn(new RequestResult<>(false, Collections.singletonList(dm23Packet), Collections.emptyList()));
+        when(dtcModule.requestDM23(any()))
+                .thenReturn(new RequestResult<>(false, List.of(dm23Packet), List.of()));
 
         instance.setJ1939(j1939);
 
@@ -452,7 +451,7 @@ public class SectionA5VerifierTest extends AbstractControllerTest {
         verify(diagnosticReadinessModule).setJ1939(j1939);
 
         verify(dtcModule).setJ1939(j1939);
-        verify(dtcModule).requestDM23(any(), eq(true));
+        verify(dtcModule).requestDM23(any());
 
         verify(obdTestsModule).setJ1939(j1939);
 
@@ -469,8 +468,8 @@ public class SectionA5VerifierTest extends AbstractControllerTest {
         DM23PreviouslyMILOnEmissionDTCPacket dm23Packet = mock(DM23PreviouslyMILOnEmissionDTCPacket.class);
         when(dm23Packet.getMalfunctionIndicatorLampStatus()).thenReturn(LampStatus.ON);
 
-        when(dtcModule.requestDM23(any(), eq(true)))
-                .thenReturn(new RequestResult<>(false, Collections.singletonList(dm23Packet), Collections.emptyList()));
+        when(dtcModule.requestDM23(any()))
+                .thenReturn(new RequestResult<>(false, List.of(dm23Packet), List.of()));
 
         instance.setJ1939(j1939);
 
@@ -486,7 +485,7 @@ public class SectionA5VerifierTest extends AbstractControllerTest {
         verify(diagnosticReadinessModule).setJ1939(j1939);
 
         verify(dtcModule).setJ1939(j1939);
-        verify(dtcModule).requestDM23(any(), eq(true));
+        verify(dtcModule).requestDM23(any());
 
         verify(obdTestsModule).setJ1939(j1939);
 
@@ -670,7 +669,7 @@ public class SectionA5VerifierTest extends AbstractControllerTest {
         DM26TripDiagnosticReadinessPacket dm26Packet = mock(DM26TripDiagnosticReadinessPacket.class);
 
         when(dtcModule.requestDM26(any()))
-                .thenReturn(new RequestResult<>(false, Collections.singletonList(dm26Packet), Collections.emptyList()));
+                .thenReturn(new RequestResult<>(false, List.of(dm26Packet), List.of()));
 
         instance.setJ1939(j1939);
         assertTrue(instance.verifyDM26(listener));
@@ -699,7 +698,7 @@ public class SectionA5VerifierTest extends AbstractControllerTest {
         when(dm26Packet.getWarmUpsSinceClear()).thenReturn((byte) 0x02);
 
         when(dtcModule.requestDM26(any()))
-                .thenReturn(new RequestResult<>(false, Collections.singletonList(dm26Packet), Collections.emptyList()));
+                .thenReturn(new RequestResult<>(false, List.of(dm26Packet), List.of()));
 
         instance.setJ1939(j1939);
         assertFalse(instance.verifyDM26(listener));
@@ -724,13 +723,13 @@ public class SectionA5VerifierTest extends AbstractControllerTest {
     @Test
     public void testVerifyDM28() {
         DM28PermanentEmissionDTCPacket dm28Packet = mock(DM28PermanentEmissionDTCPacket.class);
-        when(dm28Packet.getDtcs()).thenReturn(Collections.emptyList());
+        when(dm28Packet.getDtcs()).thenReturn(List.of());
 
-        when(dtcModule.requestDM28(any(), eq(true)))
-                .thenReturn(new RequestResult<>(false, Collections.singletonList(dm28Packet), Collections.emptyList()));
+        when(dtcModule.requestDM28(any()))
+                .thenReturn(new RequestResult<>(false, List.of(dm28Packet), List.of()));
         instance.setJ1939(j1939);
 
-        assertTrue(instance.verifyDM28(Collections.singletonList(dm28Packet),
+        assertTrue(instance.verifyDM28(List.of(dm28Packet),
                 listener));
 
         assertEquals("PASS: Section A.5 Step 8.a DM28 Verification", listener.getMessages());
@@ -740,7 +739,7 @@ public class SectionA5VerifierTest extends AbstractControllerTest {
         verify(diagnosticReadinessModule).setJ1939(j1939);
 
         verify(dtcModule).setJ1939(j1939);
-        verify(dtcModule).requestDM28(any(), eq(true));
+        verify(dtcModule).requestDM28(any());
 
         verify(obdTestsModule).setJ1939(j1939);
 
@@ -759,11 +758,11 @@ public class SectionA5VerifierTest extends AbstractControllerTest {
         DM28PermanentEmissionDTCPacket previousDM28Packet = new DM28PermanentEmissionDTCPacket(Packet
                 .create(DM28PermanentEmissionDTCPacket.PGN, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00));
 
-        when(dtcModule.requestDM28(any(), eq(true)))
-                .thenReturn(new RequestResult<>(false, Collections.singletonList(dm28Packet), Collections.emptyList()));
+        when(dtcModule.requestDM28(any()))
+                .thenReturn(new RequestResult<>(false, List.of(dm28Packet), List.of()));
         instance.setJ1939(j1939);
 
-        assertFalse(instance.verifyDM28(Collections.singletonList(previousDM28Packet),
+        assertFalse(instance.verifyDM28(List.of(previousDM28Packet),
                 listener));
 
         String expectedMessages = "Section A.5 verification failed during DM28 check done at table step 8.a" + NL
@@ -780,7 +779,7 @@ public class SectionA5VerifierTest extends AbstractControllerTest {
         verify(diagnosticReadinessModule).setJ1939(j1939);
 
         verify(dtcModule).setJ1939(j1939);
-        verify(dtcModule).requestDM28(any(), eq(true));
+        verify(dtcModule).requestDM28(any());
 
         verify(obdTestsModule).setJ1939(j1939);
 
@@ -809,7 +808,7 @@ public class SectionA5VerifierTest extends AbstractControllerTest {
         when(dm29Packet.getEmissionRelatedPreviouslyMILOnDTCCount()).thenReturn(0);
 
         when(dtcModule.requestDM29(any()))
-                .thenReturn(new RequestResult<>(false, Collections.singletonList(dm29Packet), Collections.emptyList()));
+                .thenReturn(new RequestResult<>(false, List.of(dm29Packet), List.of()));
 
         instance.setJ1939(j1939);
         assertTrue(instance.verifyDM29(listener));
@@ -848,7 +847,7 @@ public class SectionA5VerifierTest extends AbstractControllerTest {
         when(dm29Packet.getEmissionRelatedMILOnDTCCount()).thenReturn(1);
 
         when(dtcModule.requestDM29(any()))
-                .thenReturn(new RequestResult<>(false, Collections.singletonList(dm29Packet), Collections.emptyList()));
+                .thenReturn(new RequestResult<>(false, List.of(dm29Packet), List.of()));
 
         instance.setJ1939(j1939);
         assertFalse(instance.verifyDM29(listener));
@@ -892,7 +891,7 @@ public class SectionA5VerifierTest extends AbstractControllerTest {
         when(dm29Packet.getEmissionRelatedPreviouslyMILOnDTCCount()).thenReturn(1);
 
         when(dtcModule.requestDM29(any()))
-                .thenReturn(new RequestResult<>(false, Collections.singletonList(dm29Packet), Collections.emptyList()));
+                .thenReturn(new RequestResult<>(false, List.of(dm29Packet), List.of()));
 
         instance.setJ1939(j1939);
         assertFalse(instance.verifyDM29(listener));
@@ -935,7 +934,7 @@ public class SectionA5VerifierTest extends AbstractControllerTest {
         when(dm29Packet.getEmissionRelatedPermanentDTCCount()).thenReturn(1);
 
         when(dtcModule.requestDM29(any()))
-                .thenReturn(new RequestResult<>(false, Collections.singletonList(dm29Packet), Collections.emptyList()));
+                .thenReturn(new RequestResult<>(false, List.of(dm29Packet), List.of()));
 
         instance.setJ1939(j1939);
         assertFalse(instance.verifyDM29(listener));
@@ -959,10 +958,10 @@ public class SectionA5VerifierTest extends AbstractControllerTest {
     @Test
     public void testVerifyDM31() {
         DM31DtcToLampAssociation dm31Packet = mock(DM31DtcToLampAssociation.class);
-        when(dm31Packet.getDtcLampStatuses()).thenReturn(Collections.emptyList());
+        when(dm31Packet.getDtcLampStatuses()).thenReturn(List.of());
 
         when(dtcModule.requestDM31(any()))
-                .thenReturn(new RequestResult<>(false, Collections.singletonList(dm31Packet), Collections.emptyList()));
+                .thenReturn(new RequestResult<>(false, List.of(dm31Packet), List.of()));
 
         instance.setJ1939(j1939);
 
@@ -990,10 +989,10 @@ public class SectionA5VerifierTest extends AbstractControllerTest {
     public void testVerifyDM31Fail() {
         DM31DtcToLampAssociation dm31Packet = mock(DM31DtcToLampAssociation.class);
         DTCLampStatus dm31DtcLampStatus = mock(DTCLampStatus.class);
-        when(dm31Packet.getDtcLampStatuses()).thenReturn(Collections.singletonList(dm31DtcLampStatus));
+        when(dm31Packet.getDtcLampStatuses()).thenReturn(List.of(dm31DtcLampStatus));
 
         when(dtcModule.requestDM31(any()))
-                .thenReturn(new RequestResult<>(false, Collections.singletonList(dm31Packet), Collections.emptyList()));
+                .thenReturn(new RequestResult<>(false, List.of(dm31Packet), List.of()));
 
         instance.setJ1939(j1939);
 
@@ -1057,11 +1056,11 @@ public class SectionA5VerifierTest extends AbstractControllerTest {
 
         //
         when(dtcModule.requestDM33(any(), eq(0x00))).thenReturn(
-                new RequestResult<>(false, Collections.singletonList(dm33Packet0), Collections.emptyList()));
+                new RequestResult<>(false, List.of(dm33Packet0), List.of()));
         when(dtcModule.requestDM33(any(), eq(0x17))).thenReturn(
-                new RequestResult<>(false, Collections.singletonList(dm33Packet17), Collections.emptyList()));
+                new RequestResult<>(false, List.of(dm33Packet17), List.of()));
         when(dtcModule.requestDM33(any(), eq(0x21))).thenReturn(
-                new RequestResult<>(false, Collections.singletonList(dm33Packet21), Collections.emptyList()));
+                new RequestResult<>(false, List.of(dm33Packet21), List.of()));
 
         instance.setJ1939(j1939);
 
@@ -1117,11 +1116,11 @@ public class SectionA5VerifierTest extends AbstractControllerTest {
         };
 
         when(dtcModule.requestDM33(any(), eq(0x00))).thenReturn(
-                new RequestResult<>(false, Collections.singletonList(dm33Packet0), Collections.emptyList()));
+                new RequestResult<>(false, List.of(dm33Packet0), List.of()));
         when(dtcModule.requestDM33(any(), eq(0x17))).thenReturn(
-                new RequestResult<>(false, Collections.singletonList(dm33Packet17), Collections.emptyList()));
+                new RequestResult<>(false, List.of(dm33Packet17), List.of()));
         when(dtcModule.requestDM33(any(), eq(0x21))).thenReturn(
-                new RequestResult<>(false, Collections.singletonList(dm33Packet21), Collections.emptyList()));
+                new RequestResult<>(false, List.of(dm33Packet21), List.of()));
 
         instance.setJ1939(j1939);
 
@@ -1186,11 +1185,11 @@ public class SectionA5VerifierTest extends AbstractControllerTest {
         };
 
         when(dtcModule.requestDM33(any(), eq(0x00))).thenReturn(
-                new RequestResult<>(false, Collections.singletonList(dm33Packet0), Collections.emptyList()));
+                new RequestResult<>(false, List.of(dm33Packet0), List.of()));
         when(dtcModule.requestDM33(any(), eq(0x17))).thenReturn(
-                new RequestResult<>(false, Collections.singletonList(dm33Packet17), Collections.emptyList()));
+                new RequestResult<>(false, List.of(dm33Packet17), List.of()));
         when(dtcModule.requestDM33(any(), eq(0x21))).thenReturn(
-                new RequestResult<>(false, Collections.emptyList(), Collections.emptyList()));
+                new RequestResult<>(false, List.of(), List.of()));
 
         instance.setJ1939(j1939);
 
@@ -1230,9 +1229,9 @@ public class SectionA5VerifierTest extends AbstractControllerTest {
     public void testVerifyDM5() {
 
         DM5DiagnosticReadinessPacket dm5Packet = mock(DM5DiagnosticReadinessPacket.class);
-        when(diagnosticReadinessModule.requestDM5(any(), eq(true)))
-                .thenReturn(new RequestResult<>(false, Collections.singletonList(dm5Packet),
-                        Collections.emptyList()));
+        when(diagnosticReadinessModule.requestDM5(any()))
+                .thenReturn(new RequestResult<>(false, List.of(dm5Packet),
+                        List.of()));
 
         instance.setJ1939(j1939);
 
@@ -1246,7 +1245,7 @@ public class SectionA5VerifierTest extends AbstractControllerTest {
         assertEquals("", listener.getResults());
 
         verify(diagnosticReadinessModule).setJ1939(j1939);
-        verify(diagnosticReadinessModule).requestDM5(any(), eq(true));
+        verify(diagnosticReadinessModule).requestDM5(any());
 
         verify(dtcModule).setJ1939(j1939);
 
@@ -1270,10 +1269,10 @@ public class SectionA5VerifierTest extends AbstractControllerTest {
         when(dm5Status.isComplete()).thenReturn(true);
         MonitoredSystem dm5MonitoredSystem = mock(MonitoredSystem.class);
         when(dm5MonitoredSystem.getStatus()).thenReturn(dm5Status);
-        when(dm5Packet.getContinuouslyMonitoredSystems()).thenReturn(Collections.singletonList(dm5MonitoredSystem));
-        when(diagnosticReadinessModule.requestDM5(any(), eq(true)))
-                .thenReturn(new RequestResult<>(false, Collections.singletonList(dm5Packet),
-                        Collections.emptyList()));
+        when(dm5Packet.getContinuouslyMonitoredSystems()).thenReturn(List.of(dm5MonitoredSystem));
+        when(diagnosticReadinessModule.requestDM5(any()))
+                .thenReturn(new RequestResult<>(false, List.of(dm5Packet),
+                        List.of()));
 
         instance.setJ1939(j1939);
 
@@ -1289,7 +1288,7 @@ public class SectionA5VerifierTest extends AbstractControllerTest {
         assertEquals("", listener.getResults());
 
         verify(diagnosticReadinessModule).setJ1939(j1939);
-        verify(diagnosticReadinessModule).requestDM5(any(), eq(true));
+        verify(diagnosticReadinessModule).requestDM5(any());
 
         verify(dtcModule).setJ1939(j1939);
 
@@ -1312,10 +1311,10 @@ public class SectionA5VerifierTest extends AbstractControllerTest {
         when(dm5Status.isComplete()).thenReturn(false);
         MonitoredSystem dm5MonitoredSystem = mock(MonitoredSystem.class);
         when(dm5MonitoredSystem.getStatus()).thenReturn(dm5Status);
-        when(dm5Packet.getContinuouslyMonitoredSystems()).thenReturn(Collections.singletonList(dm5MonitoredSystem));
-        when(diagnosticReadinessModule.requestDM5(any(), eq(true)))
-                .thenReturn(new RequestResult<>(false, Collections.singletonList(dm5Packet),
-                        Collections.emptyList()));
+        when(dm5Packet.getContinuouslyMonitoredSystems()).thenReturn(List.of(dm5MonitoredSystem));
+        when(diagnosticReadinessModule.requestDM5(any()))
+                .thenReturn(new RequestResult<>(false, List.of(dm5Packet),
+                        List.of()));
 
         instance.setJ1939(j1939);
 
@@ -1330,7 +1329,7 @@ public class SectionA5VerifierTest extends AbstractControllerTest {
         assertEquals("", listener.getResults());
 
         verify(diagnosticReadinessModule).setJ1939(j1939);
-        verify(diagnosticReadinessModule).requestDM5(any(), eq(true));
+        verify(diagnosticReadinessModule).requestDM5(any());
 
         verify(dtcModule).setJ1939(j1939);
 
@@ -1346,12 +1345,12 @@ public class SectionA5VerifierTest extends AbstractControllerTest {
     @Test
     public void testVerifyDM6() {
         DM6PendingEmissionDTCPacket dm6Packet = mock(DM6PendingEmissionDTCPacket.class);
-        when(dm6Packet.getDtcs()).thenReturn(Collections.emptyList());
+        when(dm6Packet.getDtcs()).thenReturn(List.of());
         when(dm6Packet.getMalfunctionIndicatorLampStatus()).thenReturn(LampStatus.OFF);
 
         when(dtcModule.requestDM6(any()))
-                .thenReturn(new RequestResult<>(false, Collections.singletonList(dm6Packet),
-                        Collections.emptyList()));
+                .thenReturn(new RequestResult<>(false, List.of(dm6Packet),
+                        List.of()));
         instance.setJ1939(j1939);
 
         assertTrue(instance.verifyDM6(listener));
@@ -1378,12 +1377,12 @@ public class SectionA5VerifierTest extends AbstractControllerTest {
     public void testVerifyDM6Fail() {
         DM6PendingEmissionDTCPacket dm6Packet = mock(DM6PendingEmissionDTCPacket.class);
         DiagnosticTroubleCode dtc = mock(DiagnosticTroubleCode.class);
-        when(dm6Packet.getDtcs()).thenReturn(Collections.singletonList(dtc));
+        when(dm6Packet.getDtcs()).thenReturn(List.of(dtc));
         when(dm6Packet.getMalfunctionIndicatorLampStatus()).thenReturn(LampStatus.SLOW_FLASH);
 
         when(dtcModule.requestDM6(any()))
-                .thenReturn(new RequestResult<>(false, Collections.singletonList(dm6Packet),
-                        Collections.emptyList()));
+                .thenReturn(new RequestResult<>(false, List.of(dm6Packet),
+                        List.of()));
         instance.setJ1939(j1939);
 
         assertFalse(instance.verifyDM6(listener));
@@ -1406,10 +1405,6 @@ public class SectionA5VerifierTest extends AbstractControllerTest {
         verify(vehicleInformationModule).setJ1939(j1939);
     }
 
-    /**
-     * Test method for
-     * {@link org.etools.j1939_84.controllers.part1.SectionA5Verifier#verify(java.util.List, java.util.List, java.util.List, java.util.List, org.etools.j1939_84.controllers.ResultsListener)}.
-     */
     @Test
     public void testVerifyDM7DM30() {
         ArrayList<Integer> obdModuleAddresses = new ArrayList<>() {
@@ -1430,45 +1425,39 @@ public class SectionA5VerifierTest extends AbstractControllerTest {
         when(scaledTestResult0.getTestMaximum()).thenReturn(0xFFFF);
         when(scaledTestResult0.getTestValue()).thenReturn(0xFFFF);
         when(scaledTestResult0.getTestMinimum()).thenReturn(0xFFFF);
-        when(dm30Packet0.getTestResults()).thenReturn(Collections.singletonList(scaledTestResult0));
+        when(dm30Packet0.getTestResults()).thenReturn(List.of(scaledTestResult0));
         ScaledTestResult scaledTestResult17 = mock(ScaledTestResult.class);
         when(scaledTestResult17.getTestMaximum()).thenReturn(0xFFFF);
         when(scaledTestResult17.getTestValue()).thenReturn(0xFFFF);
         when(scaledTestResult17.getTestMinimum()).thenReturn(0xFFFF);
-        when(dm30Packet17.getTestResults()).thenReturn(Collections.singletonList(scaledTestResult17));
+        when(dm30Packet17.getTestResults()).thenReturn(List.of(scaledTestResult17));
         ScaledTestResult scaledTestResult21 = mock(ScaledTestResult.class);
         when(scaledTestResult21.getTestMaximum()).thenReturn(0xFFFF);
         when(scaledTestResult21.getTestValue()).thenReturn(0xFFFF);
         when(scaledTestResult21.getTestMinimum()).thenReturn(0xFFFF);
-        when(dm30Packet21.getTestResults()).thenReturn(Collections.singletonList(scaledTestResult21));
+        when(dm30Packet21.getTestResults()).thenReturn(List.of(scaledTestResult21));
 
         SupportedSPN supportedSPN0 = mock(SupportedSPN.class);
-        when(supportedSPN0.getSpn()).thenReturn(spn);
         SupportedSPN supportedSPN17 = mock(SupportedSPN.class);
-        when(supportedSPN17.getSpn()).thenReturn(spn);
         SupportedSPN supportedSPN21 = mock(SupportedSPN.class);
-        when(supportedSPN21.getSpn()).thenReturn(spn);
 
         OBDModuleInformation obdModuleInfo0 = mock(OBDModuleInformation.class);
-        when(obdModuleInfo0.getTestResultSpns()).thenReturn(Collections.singletonList(supportedSPN0));
+        when(obdModuleInfo0.getTestResultSpns()).thenReturn(List.of(supportedSPN0));
         OBDModuleInformation obdModuleInfo17 = mock(OBDModuleInformation.class);
-        when(obdModuleInfo17.getTestResultSpns()).thenReturn(Collections.singletonList(supportedSPN17));
+        when(obdModuleInfo17.getTestResultSpns()).thenReturn(List.of(supportedSPN17));
         OBDModuleInformation obdModuleInfo21 = mock(OBDModuleInformation.class);
-        when(obdModuleInfo21.getTestResultSpns()).thenReturn(Collections.singletonList(supportedSPN21));
+        when(obdModuleInfo21.getTestResultSpns()).thenReturn(List.of(supportedSPN21));
 
         when(dataRepository.getObdModule(0x00)).thenReturn(obdModuleInfo0);
         when(dataRepository.getObdModule(0x17)).thenReturn(obdModuleInfo17);
         when(dataRepository.getObdModule(0x21)).thenReturn(obdModuleInfo21);
 
-        when(obdTestsModule.requestDM30Packets(any(), eq(0x00), eq(spn)))
-                .thenReturn(new RequestResult<>(false, Collections.singletonList(dm30Packet0),
-                        Collections.emptyList()));
-        when(obdTestsModule.requestDM30Packets(any(), eq(0x17), eq(spn)))
-                .thenReturn(new RequestResult<>(false, Collections.singletonList(dm30Packet17),
-                        Collections.emptyList()));
-        when(obdTestsModule.requestDM30Packets(any(), eq(0x21), eq(spn)))
-                .thenReturn(new RequestResult<>(false, Collections.singletonList(dm30Packet21),
-                        Collections.emptyList()));
+        when(obdTestsModule.getDM30Packets(any(), eq(0x00), eq(supportedSPN0)))
+                .thenReturn(List.of(dm30Packet0));
+        when(obdTestsModule.getDM30Packets(any(), eq(0x17), eq(supportedSPN17)))
+                .thenReturn(List.of(dm30Packet17));
+        when(obdTestsModule.getDM30Packets(any(), eq(0x21), eq(supportedSPN21)))
+                .thenReturn(List.of(dm30Packet21));
 
         instance.setJ1939(j1939);
 
@@ -1487,9 +1476,9 @@ public class SectionA5VerifierTest extends AbstractControllerTest {
         verify(dtcModule).setJ1939(j1939);
 
         verify(obdTestsModule).setJ1939(j1939);
-        verify(obdTestsModule).requestDM30Packets(any(), eq(0x00), eq(spn));
-        verify(obdTestsModule).requestDM30Packets(any(), eq(0x17), eq(spn));
-        verify(obdTestsModule).requestDM30Packets(any(), eq(0x21), eq(spn));
+        verify(obdTestsModule).getDM30Packets(any(), eq(0x00), eq(supportedSPN0));
+        verify(obdTestsModule).getDM30Packets(any(), eq(0x17), eq(supportedSPN17));
+        verify(obdTestsModule).getDM30Packets(any(), eq(0x21), eq(supportedSPN21));
 
         verify(vehicleInformationModule).setJ1939(j1939);
     }
@@ -1518,45 +1507,39 @@ public class SectionA5VerifierTest extends AbstractControllerTest {
         when(scaledTestResult0.getTestMaximum()).thenReturn(0x0000);
         when(scaledTestResult0.getTestValue()).thenReturn(0x88);
         when(scaledTestResult0.getTestMinimum()).thenReturn(0x0000);
-        when(dm30Packet0.getTestResults()).thenReturn(Collections.singletonList(scaledTestResult0));
+        when(dm30Packet0.getTestResults()).thenReturn(List.of(scaledTestResult0));
         ScaledTestResult scaledTestResult17 = mock(ScaledTestResult.class);
         when(scaledTestResult17.getTestMaximum()).thenReturn(0xFFFF);
         when(scaledTestResult17.getTestValue()).thenReturn(0x55);
         when(scaledTestResult17.getTestMinimum()).thenReturn(0xFFFF);
-        when(dm30Packet17.getTestResults()).thenReturn(Collections.singletonList(scaledTestResult17));
+        when(dm30Packet17.getTestResults()).thenReturn(List.of(scaledTestResult17));
         ScaledTestResult scaledTestResult21 = mock(ScaledTestResult.class);
         when(scaledTestResult21.getTestMaximum()).thenReturn(0xFFFF);
         when(scaledTestResult21.getTestValue()).thenReturn(0xFB00);
         when(scaledTestResult21.getTestMinimum()).thenReturn(0xFFFF);
-        when(dm30Packet21.getTestResults()).thenReturn(Collections.singletonList(scaledTestResult21));
+        when(dm30Packet21.getTestResults()).thenReturn(List.of(scaledTestResult21));
 
         SupportedSPN supportedSPN0 = mock(SupportedSPN.class);
-        when(supportedSPN0.getSpn()).thenReturn(spn);
         SupportedSPN supportedSPN17 = mock(SupportedSPN.class);
-        when(supportedSPN17.getSpn()).thenReturn(spn);
         SupportedSPN supportedSPN21 = mock(SupportedSPN.class);
-        when(supportedSPN21.getSpn()).thenReturn(spn);
 
         OBDModuleInformation obdModuleInfo0 = mock(OBDModuleInformation.class);
-        when(obdModuleInfo0.getTestResultSpns()).thenReturn(Collections.singletonList(supportedSPN0));
+        when(obdModuleInfo0.getTestResultSpns()).thenReturn(List.of(supportedSPN0));
         OBDModuleInformation obdModuleInfo17 = mock(OBDModuleInformation.class);
-        when(obdModuleInfo17.getTestResultSpns()).thenReturn(Collections.singletonList(supportedSPN17));
+        when(obdModuleInfo17.getTestResultSpns()).thenReturn(List.of(supportedSPN17));
         OBDModuleInformation obdModuleInfo21 = mock(OBDModuleInformation.class);
-        when(obdModuleInfo21.getTestResultSpns()).thenReturn(Collections.singletonList(supportedSPN21));
+        when(obdModuleInfo21.getTestResultSpns()).thenReturn(List.of(supportedSPN21));
 
         when(dataRepository.getObdModule(0x00)).thenReturn(obdModuleInfo0);
         when(dataRepository.getObdModule(0x17)).thenReturn(obdModuleInfo17);
         when(dataRepository.getObdModule(0x21)).thenReturn(obdModuleInfo21);
 
-        when(obdTestsModule.requestDM30Packets(any(), eq(0x00), eq(spn)))
-                .thenReturn(new RequestResult<>(false, Collections.singletonList(dm30Packet0),
-                        Collections.emptyList()));
-        when(obdTestsModule.requestDM30Packets(any(), eq(0x17), eq(spn)))
-                .thenReturn(new RequestResult<>(false, Collections.singletonList(dm30Packet17),
-                        Collections.emptyList()));
-        when(obdTestsModule.requestDM30Packets(any(), eq(0x21), eq(spn)))
-                .thenReturn(new RequestResult<>(false, Collections.singletonList(dm30Packet21),
-                        Collections.emptyList()));
+        when(obdTestsModule.getDM30Packets(any(), eq(0x00), eq(supportedSPN0)))
+                .thenReturn(List.of(dm30Packet0));
+        when(obdTestsModule.getDM30Packets(any(), eq(0x17), eq(supportedSPN17)))
+                .thenReturn(List.of(dm30Packet17));
+        when(obdTestsModule.getDM30Packets(any(), eq(0x21), eq(supportedSPN21)))
+                .thenReturn(List.of(dm30Packet21));
 
         instance.setJ1939(j1939);
 
@@ -1581,9 +1564,9 @@ public class SectionA5VerifierTest extends AbstractControllerTest {
         verify(dtcModule).setJ1939(j1939);
 
         verify(obdTestsModule).setJ1939(j1939);
-        verify(obdTestsModule).requestDM30Packets(any(), eq(0x00), eq(spn));
-        verify(obdTestsModule).requestDM30Packets(any(), eq(0x17), eq(spn));
-        verify(obdTestsModule).requestDM30Packets(any(), eq(0x21), eq(spn));
+        verify(obdTestsModule).getDM30Packets(any(), eq(0x00), eq(supportedSPN0));
+        verify(obdTestsModule).getDM30Packets(any(), eq(0x17), eq(supportedSPN17));
+        verify(obdTestsModule).getDM30Packets(any(), eq(0x21), eq(supportedSPN21));
 
         verify(vehicleInformationModule).setJ1939(j1939);
     }
@@ -1594,13 +1577,13 @@ public class SectionA5VerifierTest extends AbstractControllerTest {
         EngineHoursPacket engineHoursPacket = mock(EngineHoursPacket.class);
 
         when(vehicleInformationModule.requestEngineHours(any()))
-                .thenReturn(new RequestResult<>(false, Collections.singletonList(engineHoursPacket),
-                        Collections.emptyList()));
+                .thenReturn(new RequestResult<>(false, List.of(engineHoursPacket),
+                        List.of()));
 
         instance.setJ1939(j1939);
 
         assertTrue(instance.verifyEngineHours(
-                Collections.singletonList(engineHoursPacket),
+                List.of(engineHoursPacket),
                 listener));
 
         assertEquals(
@@ -1629,12 +1612,12 @@ public class SectionA5VerifierTest extends AbstractControllerTest {
 
         when(vehicleInformationModule.requestEngineHours(any()))
                 .thenReturn(new RequestResult<>(false, Arrays.asList(engineHoursPacket, engineHoursPacket1),
-                        Collections.emptyList()));
+                        List.of()));
 
         instance.setJ1939(j1939);
 
         assertFalse(instance.verifyEngineHours(
-                Collections.emptyList(),
+                List.of(),
                 listener));
 
         String expected = "";
@@ -1676,12 +1659,12 @@ public class SectionA5VerifierTest extends AbstractControllerTest {
 
         when(vehicleInformationModule.requestEngineHours(any()))
                 .thenReturn(new RequestResult<>(false, Arrays.asList(engineHoursPacket, engineHoursPacket1),
-                        Collections.emptyList()));
+                        List.of()));
 
         instance.setJ1939(j1939);
 
         assertFalse(instance.verifyEngineHours(
-                Collections.singletonList(engineHoursPacket),
+                List.of(engineHoursPacket),
                 listener));
 
         String expected = "";
@@ -1736,20 +1719,20 @@ public class SectionA5VerifierTest extends AbstractControllerTest {
         when(monitoredSystemStatusDM5.isEnabled()).thenReturn(true);
         when(monitoredSystemStatusDM5.isComplete()).thenReturn(true);
         when(monitoredSystemDM5.getStatus()).thenReturn(monitoredSystemStatusDM5);
-        when(dm5Packet.getContinuouslyMonitoredSystems()).thenReturn(Collections.singletonList(monitoredSystemDM5));
+        when(dm5Packet.getContinuouslyMonitoredSystems()).thenReturn(List.of(monitoredSystemDM5));
         when(dm5Packet.getActiveCodeCount()).thenReturn((byte) 2);
         when(dm5Packet.toString()).thenReturn(
                 "DM5 from Engine #1 (0): OBD Compliance: HD OBD (20), Active Codes: 11, Previously Active Codes: 22");
 
         DM6PendingEmissionDTCPacket dm6Packet = mock(DM6PendingEmissionDTCPacket.class);
         DiagnosticTroubleCode diagnosticTroubleCodeDM6 = mock(DiagnosticTroubleCode.class);
-        when(dm6Packet.getDtcs()).thenReturn(Collections.singletonList(diagnosticTroubleCodeDM6));
+        when(dm6Packet.getDtcs()).thenReturn(List.of(diagnosticTroubleCodeDM6));
         when(dm6Packet.getMalfunctionIndicatorLampStatus()).thenReturn(LampStatus.FAST_FLASH);
 
         DM12MILOnEmissionDTCPacket dm12Packet = mock(DM12MILOnEmissionDTCPacket.class);
         DiagnosticTroubleCode diagnosticTroubleCodeDM12 = mock(DiagnosticTroubleCode.class);
         when(dm12Packet.getMalfunctionIndicatorLampStatus()).thenReturn(LampStatus.SLOW_FLASH);
-        when(dm12Packet.getDtcs()).thenReturn(Collections.singletonList(diagnosticTroubleCodeDM12));
+        when(dm12Packet.getDtcs()).thenReturn(List.of(diagnosticTroubleCodeDM12));
 
         DM20MonitorPerformanceRatioPacket dm20Packet = mock(DM20MonitorPerformanceRatioPacket.class);
         String expectedDM20 = "";
@@ -1766,7 +1749,7 @@ public class SectionA5VerifierTest extends AbstractControllerTest {
 
         DM23PreviouslyMILOnEmissionDTCPacket dm23Packet = mock(DM23PreviouslyMILOnEmissionDTCPacket.class);
         DiagnosticTroubleCode dm23Dtc = mock(DiagnosticTroubleCode.class);
-        when(dm23Packet.getDtcs()).thenReturn(Collections.singletonList(dm23Dtc));
+        when(dm23Packet.getDtcs()).thenReturn(List.of(dm23Dtc));
         when(dm23Packet.getMalfunctionIndicatorLampStatus()).thenReturn(LampStatus.ON);
 
         byte[] dm25bytes = { 0x00, 0x00, (byte) 0xFF, 0x00, 0x00, (byte) 0xFF, 0x00, (byte) 0x00, 0x00 };
@@ -1786,7 +1769,7 @@ public class SectionA5VerifierTest extends AbstractControllerTest {
                 "DTC: Engine Fuel 1 Injector Metering Rail 1 Pressure (157) Mechanical System Not Responding Or Out Of Adjustment (7) 1 times";
         when(dm28Packet.toString()).thenReturn(
                 expectedDM28String);
-        when(dm28Packet.getDtcs()).thenReturn(Collections.singletonList(diagnosticTroubleCode28));
+        when(dm28Packet.getDtcs()).thenReturn(List.of(diagnosticTroubleCode28));
 
         DM29DtcCounts dm29Packet = mock(DM29DtcCounts.class);
         when(dm29Packet.getAllPendingDTCCount()).thenReturn(0);
@@ -1813,7 +1796,7 @@ public class SectionA5VerifierTest extends AbstractControllerTest {
 
         DM31DtcToLampAssociation dm31Packet = mock(DM31DtcToLampAssociation.class);
         DTCLampStatus dtcLampStatusDM31 = mock(DTCLampStatus.class);
-        when(dm31Packet.getDtcLampStatuses()).thenReturn(Collections.singletonList(dtcLampStatusDM31));
+        when(dm31Packet.getDtcLampStatuses()).thenReturn(List.of(dtcLampStatusDM31));
 
         DM33EmissionIncreasingAECDActiveTime dm33Packet0 = mock(
                 DM33EmissionIncreasingAECDActiveTime.class);
@@ -1842,59 +1825,56 @@ public class SectionA5VerifierTest extends AbstractControllerTest {
         when(scaledTestResult0.getTestMaximum()).thenReturn(0xFF02);
         when(scaledTestResult0.getTestValue()).thenReturn(0xFFFF);
         when(scaledTestResult0.getTestMinimum()).thenReturn(0xFB00);
-        when(dm30Packet0.getTestResults()).thenReturn(Collections.singletonList(scaledTestResult0));
+        when(dm30Packet0.getTestResults()).thenReturn(List.of(scaledTestResult0));
         ScaledTestResult scaledTestResult17 = mock(ScaledTestResult.class);
         when(scaledTestResult17.getTestMaximum()).thenReturn(0xFB00);
         when(scaledTestResult17.getTestValue()).thenReturn(0xFF16);
         when(scaledTestResult17.getTestMinimum()).thenReturn(0x0000);
-        when(dm30Packet17.getTestResults()).thenReturn(Collections.singletonList(scaledTestResult17));
+        when(dm30Packet17.getTestResults()).thenReturn(List.of(scaledTestResult17));
         ScaledTestResult scaledTestResult21 = mock(ScaledTestResult.class);
         when(scaledTestResult21.getTestMaximum()).thenReturn(0xFFFF);
         when(scaledTestResult21.getTestValue()).thenReturn(0x0000);
         when(scaledTestResult21.getTestMinimum()).thenReturn(0x0016);
-        when(dm30Packet21.getTestResults()).thenReturn(Collections.singletonList(scaledTestResult21));
+        when(dm30Packet21.getTestResults()).thenReturn(List.of(scaledTestResult21));
 
         SupportedSPN supportedSPN0 = mock(SupportedSPN.class);
-        when(supportedSPN0.getSpn()).thenReturn(spn);
         SupportedSPN supportedSPN17 = mock(SupportedSPN.class);
-        when(supportedSPN17.getSpn()).thenReturn(spn);
         SupportedSPN supportedSPN21 = mock(SupportedSPN.class);
-        when(supportedSPN21.getSpn()).thenReturn(spn);
 
         OBDModuleInformation obdModuleInfo0 = mock(OBDModuleInformation.class);
-        when(obdModuleInfo0.getTestResultSpns()).thenReturn(Collections.singletonList(supportedSPN0));
+        when(obdModuleInfo0.getTestResultSpns()).thenReturn(List.of(supportedSPN0));
         OBDModuleInformation obdModuleInfo17 = mock(OBDModuleInformation.class);
-        when(obdModuleInfo17.getTestResultSpns()).thenReturn(Collections.singletonList(supportedSPN17));
+        when(obdModuleInfo17.getTestResultSpns()).thenReturn(List.of(supportedSPN17));
         OBDModuleInformation obdModuleInfo21 = mock(OBDModuleInformation.class);
-        when(obdModuleInfo21.getTestResultSpns()).thenReturn(Collections.singletonList(supportedSPN21));
+        when(obdModuleInfo21.getTestResultSpns()).thenReturn(List.of(supportedSPN21));
 
         when(dataRepository.getObdModuleAddresses()).thenReturn(obdModuleAddresses);
         when(dataRepository.getObdModule(0x00)).thenReturn(obdModuleInfo0);
         when(dataRepository.getObdModule(0x17)).thenReturn(obdModuleInfo17);
         when(dataRepository.getObdModule(0x21)).thenReturn(obdModuleInfo21);
 
-        when(diagnosticReadinessModule.requestDM5(any(), eq(true))).thenReturn(new RequestResult<>(false,
-                Collections.singletonList(dm5Packet),
-                Collections.emptyList()));
-        when(diagnosticReadinessModule.requestDM20(any(), eq(true)))
+        when(diagnosticReadinessModule.requestDM5(any())).thenReturn(new RequestResult<>(false,
+                                                                                         List.of(dm5Packet),
+                                                                                         List.of()));
+        when(diagnosticReadinessModule.requestDM20(any()))
                 .thenReturn(new RequestResult<>(false,
-                        Collections.singletonList(dm20Packet),
-                        Collections.emptyList()));
+                        List.of(dm20Packet),
+                        List.of()));
 
         when(dtcModule.requestDM6(any()))
                 .thenReturn(new RequestResult<>(false,
-                        Collections.singletonList(dm6Packet),
-                        Collections.emptyList()));
-        when(dtcModule.requestDM12(any(), eq(true)))
+                        List.of(dm6Packet),
+                        List.of()));
+        when(dtcModule.requestDM12(any()))
                 .thenReturn(new RequestResult<>(false,
-                        Collections.singletonList(dm12Packet),
-                        Collections.emptyList()));
+                        List.of(dm12Packet),
+                        List.of()));
         when(dtcModule.requestDM21(any()))
                 .thenReturn(new RequestResult<>(false,
-                        Collections.singletonList(dm21Packet), Collections.emptyList()));
-        when(dtcModule.requestDM23(any(), eq(true)))
+                        List.of(dm21Packet), List.of()));
+        when(dtcModule.requestDM23(any()))
                 .thenReturn(new RequestResult<>(false,
-                        Collections.singletonList(dm23Packet), Collections.emptyList()));
+                        List.of(dm23Packet), List.of()));
         when(dtcModule.requestDM25(any(), eq(0x00)))
                 .thenReturn(
                         new BusResult<>(false, dm25Packet0));
@@ -1906,50 +1886,39 @@ public class SectionA5VerifierTest extends AbstractControllerTest {
                         new BusResult<>(false, dm25Packet21));
         when(dtcModule.requestDM26(any()))
                 .thenReturn(new RequestResult<>(false,
-                        Collections.singletonList(dm26Packet), Collections.emptyList()));
-        when(dtcModule.requestDM28(any(), eq(true)))
+                        List.of(dm26Packet), List.of()));
+        when(dtcModule.requestDM28(any()))
                 .thenReturn(new RequestResult<>(false,
-                        Collections.singletonList(dm28Packet), Collections.emptyList()));
+                        List.of(dm28Packet), List.of()));
         when(dtcModule.requestDM29(any()))
-                .thenReturn(new RequestResult<>(false,
-                        Collections.singletonList(dm29Packet), Collections.emptyList()));
+                .thenReturn(new RequestResult<>(false, List.of(dm29Packet), List.of()));
         when(dtcModule.requestDM31(any()))
-                .thenReturn(new RequestResult<>(false,
-                        Collections.singletonList(dm31Packet), Collections.emptyList()));
+                .thenReturn(new RequestResult<>(false, List.of(dm31Packet), List.of()));
         when(dtcModule.requestDM33(any(), eq(0x00))).thenReturn(
-                new RequestResult<>(false, Collections.singletonList(dm33Packet0),
-                        Collections.emptyList()));
-        when(dtcModule.requestDM33(any(), eq(0x17))).thenReturn(
-                new RequestResult<>(false, Collections.singletonList(dm33Packet17),
-                        Collections.emptyList()));
-        when(dtcModule.requestDM33(any(), eq(0x21))).thenReturn(
-                new RequestResult<>(false, Collections.singletonList(dm33Packet21),
-                        Collections.emptyList()));
+                new RequestResult<>(false, List.of(dm33Packet0), List.of()));
+        when(dtcModule.requestDM33(any(), eq(0x17)))
+                .thenReturn(new RequestResult<>(false, List.of(dm33Packet17), List.of()));
+        when(dtcModule.requestDM33(any(), eq(0x21)))
+                .thenReturn(new RequestResult<>(false, List.of(dm33Packet21), List.of()));
 
-        when(obdTestsModule.requestDM30Packets(any(), eq(0x00), eq(spn)))
-                .thenReturn(new RequestResult<>(false,
-                        Collections.singletonList(dm30Packet0),
-                        Collections.emptyList()));
-        when(obdTestsModule.requestDM30Packets(any(), eq(0x17), eq(spn)))
-                .thenReturn(new RequestResult<>(false,
-                        Collections.singletonList(dm30Packet17),
-                        Collections.emptyList()));
-        when(obdTestsModule.requestDM30Packets(any(), eq(0x21), eq(spn)))
-                .thenReturn(new RequestResult<>(false,
-                        Collections.singletonList(dm30Packet21),
-                        Collections.emptyList()));
+        when(obdTestsModule.getDM30Packets(any(), eq(0x00), eq(supportedSPN0)))
+                .thenReturn(List.of(dm30Packet0));
+        when(obdTestsModule.getDM30Packets(any(), eq(0x17), eq(supportedSPN17)))
+                .thenReturn(List.of(dm30Packet17));
+        when(obdTestsModule.getDM30Packets(any(), eq(0x21), eq(supportedSPN21)))
+                .thenReturn(List.of(dm30Packet21));
 
         when(vehicleInformationModule.requestEngineHours(any()))
                 .thenReturn(new RequestResult<>(false,
-                        Collections.singletonList(engineHoursPacket),
-                        Collections.emptyList()));
+                        List.of(engineHoursPacket),
+                        List.of()));
 
         instance.setJ1939(j1939);
 
-        assertFalse(instance.verify(Collections.emptyList(),
-                Collections.emptyList(),
+        assertFalse(instance.verify(List.of(),
+                List.of(),
                 dm33Packets,
-                Collections.emptyList(),
+                List.of(),
                 listener));
 
         String expectedMessages = "Section A.5 verification failed at DM6 check done at table step 1.a" + NL +
@@ -2102,21 +2071,21 @@ public class SectionA5VerifierTest extends AbstractControllerTest {
         verify(dataRepository).getObdModule(eq(0x21));
 
         verify(diagnosticReadinessModule).setJ1939(j1939);
-        verify(diagnosticReadinessModule).requestDM5(any(), eq(true));
-        verify(diagnosticReadinessModule).requestDM20(any(), eq(true));
+        verify(diagnosticReadinessModule).requestDM5(any());
+        verify(diagnosticReadinessModule).requestDM20(any());
 
         verify(dtcModule).setJ1939(j1939);
         verify(dtcModule).requestDM6(any());
-        verify(dtcModule).requestDM12(any(), eq(true));
+        verify(dtcModule).requestDM12(any());
         verify(dtcModule).requestDM21(any());
-        verify(dtcModule).requestDM23(any(), eq(true));
+        verify(dtcModule).requestDM23(any());
 
         verify(dtcModule).requestDM25(any(), eq(0x00));
         verify(dtcModule).requestDM25(any(), eq(0x17));
         verify(dtcModule).requestDM25(any(), eq(0x21));
 
         verify(dtcModule).requestDM26(any());
-        verify(dtcModule).requestDM28(any(), eq(true));
+        verify(dtcModule).requestDM28(any());
         verify(dtcModule).requestDM29(any());
         verify(dtcModule).requestDM31(any());
         verify(dtcModule).requestDM33(any(), eq(0x00));
@@ -2124,9 +2093,9 @@ public class SectionA5VerifierTest extends AbstractControllerTest {
         verify(dtcModule).requestDM33(any(), eq(0x21));
 
         verify(obdTestsModule).setJ1939(j1939);
-        verify(obdTestsModule).requestDM30Packets(any(), eq(0x00), eq(spn));
-        verify(obdTestsModule).requestDM30Packets(any(), eq(0x17), eq(spn));
-        verify(obdTestsModule).requestDM30Packets(any(), eq(0x21), eq(spn));
+        verify(obdTestsModule).getDM30Packets(any(), eq(0x00), eq(supportedSPN0));
+        verify(obdTestsModule).getDM30Packets(any(), eq(0x17), eq(supportedSPN17));
+        verify(obdTestsModule).getDM30Packets(any(), eq(0x21), eq(supportedSPN21));
 
         verify(vehicleInformationModule).setJ1939(j1939);
         verify(vehicleInformationModule).requestEngineHours(any());
@@ -2152,16 +2121,16 @@ public class SectionA5VerifierTest extends AbstractControllerTest {
         MonitoredSystemStatus monitoredSystemStatusDM5 = mock(MonitoredSystemStatus.class);
         when(monitoredSystemStatusDM5.isEnabled()).thenReturn(false);
         when(monitoredSystemDM5.getStatus()).thenReturn(monitoredSystemStatusDM5);
-        when(dm5Packet.getContinuouslyMonitoredSystems()).thenReturn(Collections.singletonList(monitoredSystemDM5));
+        when(dm5Packet.getContinuouslyMonitoredSystems()).thenReturn(List.of(monitoredSystemDM5));
         when(dm5Packet.getPreviouslyActiveCodeCount()).thenReturn((byte) 2);
 
         DM6PendingEmissionDTCPacket dm6Packet = mock(DM6PendingEmissionDTCPacket.class);
-        when(dm6Packet.getDtcs()).thenReturn(Collections.emptyList());
+        when(dm6Packet.getDtcs()).thenReturn(List.of());
         when(dm6Packet.getMalfunctionIndicatorLampStatus()).thenReturn(LampStatus.ON);
 
         DM12MILOnEmissionDTCPacket dm12Packet = mock(DM12MILOnEmissionDTCPacket.class);
         when(dm12Packet.getMalfunctionIndicatorLampStatus()).thenReturn(LampStatus.OTHER);
-        when(dm12Packet.getDtcs()).thenReturn(Collections.emptyList());
+        when(dm12Packet.getDtcs()).thenReturn(List.of());
 
         DM20MonitorPerformanceRatioPacket dm20Packet = mock(DM20MonitorPerformanceRatioPacket.class);
         String expectedDM20 = "";
@@ -2190,7 +2159,7 @@ public class SectionA5VerifierTest extends AbstractControllerTest {
 
         DM28PermanentEmissionDTCPacket dm28Packet = mock(DM28PermanentEmissionDTCPacket.class);
         DiagnosticTroubleCode dm28DTC = mock(DiagnosticTroubleCode.class);
-        when(dm28Packet.getDtcs()).thenReturn(Collections.singletonList(dm28DTC));
+        when(dm28Packet.getDtcs()).thenReturn(List.of(dm28DTC));
         String expectedDM28String = "DM28 from Engine #1 (0): MIL: on, RSL: off, AWL: off, PL: other" + NL +
                 "DTC: Engine Fuel 1 Injector Metering Rail 1 Pressure (157) Mechanical System Not Responding Or Out Of Adjustment (7) 1 times";
         when(dm28Packet.toString()).thenReturn(
@@ -2248,59 +2217,56 @@ public class SectionA5VerifierTest extends AbstractControllerTest {
         when(scaledTestResult0.getTestMaximum()).thenReturn(0x0036);
         when(scaledTestResult0.getTestValue()).thenReturn(0xFB02);
         when(scaledTestResult0.getTestMinimum()).thenReturn(0x0019);
-        when(dm30Packet0.getTestResults()).thenReturn(Collections.singletonList(scaledTestResult0));
+        when(dm30Packet0.getTestResults()).thenReturn(List.of(scaledTestResult0));
         ScaledTestResult scaledTestResult17 = mock(ScaledTestResult.class);
         when(scaledTestResult17.getTestMaximum()).thenReturn(0x0000);
         when(scaledTestResult17.getTestValue()).thenReturn(0xFF00);
         when(scaledTestResult17.getTestMinimum()).thenReturn(0xFFFF);
-        when(dm30Packet17.getTestResults()).thenReturn(Collections.singletonList(scaledTestResult17));
+        when(dm30Packet17.getTestResults()).thenReturn(List.of(scaledTestResult17));
         ScaledTestResult scaledTestResult21 = mock(ScaledTestResult.class);
         when(scaledTestResult21.getTestMaximum()).thenReturn(0xFFFF);
         when(scaledTestResult21.getTestValue()).thenReturn(0xFB00);
         when(scaledTestResult21.getTestMinimum()).thenReturn(0xFFFF);
-        when(dm30Packet21.getTestResults()).thenReturn(Collections.singletonList(scaledTestResult21));
+        when(dm30Packet21.getTestResults()).thenReturn(List.of(scaledTestResult21));
 
         SupportedSPN supportedSPN0 = mock(SupportedSPN.class);
-        when(supportedSPN0.getSpn()).thenReturn(spn);
         SupportedSPN supportedSPN17 = mock(SupportedSPN.class);
-        when(supportedSPN17.getSpn()).thenReturn(spn);
         SupportedSPN supportedSPN21 = mock(SupportedSPN.class);
-        when(supportedSPN21.getSpn()).thenReturn(spn);
 
         OBDModuleInformation obdModuleInfo0 = mock(OBDModuleInformation.class);
-        when(obdModuleInfo0.getTestResultSpns()).thenReturn(Collections.singletonList(supportedSPN0));
+        when(obdModuleInfo0.getTestResultSpns()).thenReturn(List.of(supportedSPN0));
         OBDModuleInformation obdModuleInfo17 = mock(OBDModuleInformation.class);
-        when(obdModuleInfo17.getTestResultSpns()).thenReturn(Collections.singletonList(supportedSPN17));
+        when(obdModuleInfo17.getTestResultSpns()).thenReturn(List.of(supportedSPN17));
         OBDModuleInformation obdModuleInfo21 = mock(OBDModuleInformation.class);
-        when(obdModuleInfo21.getTestResultSpns()).thenReturn(Collections.singletonList(supportedSPN21));
+        when(obdModuleInfo21.getTestResultSpns()).thenReturn(List.of(supportedSPN21));
 
         when(dataRepository.getObdModuleAddresses()).thenReturn(obdModuleAddresses);
         when(dataRepository.getObdModule(0x00)).thenReturn(obdModuleInfo0);
         when(dataRepository.getObdModule(0x17)).thenReturn(obdModuleInfo17);
         when(dataRepository.getObdModule(0x21)).thenReturn(obdModuleInfo21);
 
-        when(diagnosticReadinessModule.requestDM5(any(), eq(true)))
+        when(diagnosticReadinessModule.requestDM5(any()))
                 .thenReturn(new RequestResult<>(false,
-                        Collections.singletonList(dm5Packet),
-                        Collections.emptyList()));
-        when(diagnosticReadinessModule.requestDM20(any(), eq(true)))
-                .thenReturn(new RequestResult<>(false, Collections.emptyList(),
-                        Collections.emptyList()));
+                        List.of(dm5Packet),
+                        List.of()));
+        when(diagnosticReadinessModule.requestDM20(any()))
+                .thenReturn(new RequestResult<>(false, List.of(),
+                        List.of()));
 
         when(dtcModule.requestDM6(any()))
                 .thenReturn(new RequestResult<>(false,
-                        Collections.singletonList(dm6Packet),
-                        Collections.emptyList()));
-        when(dtcModule.requestDM12(any(), eq(true)))
+                        List.of(dm6Packet),
+                        List.of()));
+        when(dtcModule.requestDM12(any()))
                 .thenReturn(new RequestResult<>(false,
-                        Collections.singletonList(dm12Packet),
-                        Collections.emptyList()));
+                        List.of(dm12Packet),
+                        List.of()));
         when(dtcModule.requestDM21(any()))
                 .thenReturn(new RequestResult<>(false,
-                        Collections.singletonList(dm21Packet), Collections.emptyList()));
-        when(dtcModule.requestDM23(any(), eq(true)))
-                .thenReturn(new RequestResult<>(false, Collections.singletonList(dm23Packet),
-                        Collections.emptyList()));
+                        List.of(dm21Packet), List.of()));
+        when(dtcModule.requestDM23(any()))
+                .thenReturn(new RequestResult<>(false, List.of(dm23Packet),
+                        List.of()));
         when(dtcModule.requestDM25(any(), eq(0x00)))
                 .thenReturn(
                         new BusResult<>(false, dm25Packet0));
@@ -2312,49 +2278,43 @@ public class SectionA5VerifierTest extends AbstractControllerTest {
                         new BusResult<>(false, dm25Packet21));
         when(dtcModule.requestDM26(any()))
                 .thenReturn(new RequestResult<>(false,
-                        Collections.singletonList(dm26Packet), Collections.emptyList()));
-        when(dtcModule.requestDM28(any(), eq(true)))
-                .thenReturn(new RequestResult<>(false, Collections.emptyList(),
-                        Collections.emptyList()));
+                        List.of(dm26Packet), List.of()));
+        when(dtcModule.requestDM28(any()))
+                .thenReturn(new RequestResult<>(false, List.of(),
+                        List.of()));
         when(dtcModule.requestDM29(any()))
                 .thenReturn(new RequestResult<>(false,
-                        Collections.singletonList(dm29Packet), Collections.emptyList()));
+                        List.of(dm29Packet), List.of()));
         when(dtcModule.requestDM31(any()))
                 .thenReturn(new RequestResult<>(false,
-                        Collections.singletonList(dm31Packet), Collections.emptyList()));
+                        List.of(dm31Packet), List.of()));
         when(dtcModule.requestDM33(any(), eq(0x00))).thenReturn(
-                new RequestResult<>(false, Collections.singletonList(dm33Packet0),
-                        Collections.emptyList()));
+                new RequestResult<>(false, List.of(dm33Packet0),
+                        List.of()));
         when(dtcModule.requestDM33(any(), eq(0x17))).thenReturn(
-                new RequestResult<>(false, Collections.singletonList(dm33Packet17),
-                        Collections.emptyList()));
+                new RequestResult<>(false, List.of(dm33Packet17),
+                        List.of()));
         when(dtcModule.requestDM33(any(), eq(0x21))).thenReturn(
-                new RequestResult<>(false, Collections.singletonList(dm33Packet21),
-                        Collections.emptyList()));
+                new RequestResult<>(false, List.of(dm33Packet21),
+                        List.of()));
 
-        when(obdTestsModule.requestDM30Packets(any(), eq(0x00), eq(spn)))
-                .thenReturn(new RequestResult<>(false,
-                        Collections.singletonList(dm30Packet0),
-                        Collections.emptyList()));
-        when(obdTestsModule.requestDM30Packets(any(), eq(0x17), eq(spn)))
-                .thenReturn(new RequestResult<>(false,
-                        Collections.singletonList(dm30Packet17),
-                        Collections.emptyList()));
-        when(obdTestsModule.requestDM30Packets(any(), eq(0x21), eq(157)))
-                .thenReturn(new RequestResult<>(false,
-                        Collections.singletonList(dm30Packet21),
-                        Collections.emptyList()));
+        when(obdTestsModule.getDM30Packets(any(), eq(0x00), eq(supportedSPN0)))
+                .thenReturn(List.of(dm30Packet0));
+        when(obdTestsModule.getDM30Packets(any(), eq(0x17), eq(supportedSPN17)))
+                .thenReturn(List.of(dm30Packet17));
+        when(obdTestsModule.getDM30Packets(any(), eq(0x21), eq(supportedSPN21)))
+                .thenReturn(List.of(dm30Packet21));
 
         when(vehicleInformationModule.requestEngineHours(any()))
-                .thenReturn(new RequestResult<>(false, Collections.emptyList(),
-                        Collections.emptyList()));
+                .thenReturn(new RequestResult<>(false, List.of(),
+                        List.of()));
 
         instance.setJ1939(j1939);
 
-        assertFalse(instance.verify(Collections.singletonList(dm28Packet),
-                Collections.singletonList(dm20Packet),
+        assertFalse(instance.verify(List.of(dm28Packet),
+                List.of(dm20Packet),
                 dm33Packets,
-                Collections.singletonList(engineHoursPacket),
+                List.of(engineHoursPacket),
                 listener));
 
         String expectedMessages = "Section A.5 verification failed at DM6 check done at table step 1.a" + NL +
@@ -2499,19 +2459,19 @@ public class SectionA5VerifierTest extends AbstractControllerTest {
         verify(dataRepository).getObdModule(eq(0x21));
 
         verify(diagnosticReadinessModule).setJ1939(j1939);
-        verify(diagnosticReadinessModule).requestDM5(any(), eq(true));
-        verify(diagnosticReadinessModule).requestDM20(any(), eq(true));
+        verify(diagnosticReadinessModule).requestDM5(any());
+        verify(diagnosticReadinessModule).requestDM20(any());
 
         verify(dtcModule).setJ1939(j1939);
         verify(dtcModule).requestDM6(any());
-        verify(dtcModule).requestDM12(any(), eq(true));
+        verify(dtcModule).requestDM12(any());
         verify(dtcModule).requestDM21(any());
-        verify(dtcModule).requestDM23(any(), eq(true));
+        verify(dtcModule).requestDM23(any());
         verify(dtcModule).requestDM25(any(), eq(0x00));
         verify(dtcModule).requestDM25(any(), eq(0x17));
         verify(dtcModule).requestDM25(any(), eq(0x21));
         verify(dtcModule).requestDM26(any());
-        verify(dtcModule).requestDM28(any(), eq(true));
+        verify(dtcModule).requestDM28(any());
         verify(dtcModule).requestDM29(any());
         verify(dtcModule).requestDM31(any());
         verify(dtcModule).requestDM33(any(), eq(0x00));
@@ -2519,9 +2479,9 @@ public class SectionA5VerifierTest extends AbstractControllerTest {
         verify(dtcModule).requestDM33(any(), eq(0x21));
 
         verify(obdTestsModule).setJ1939(j1939);
-        verify(obdTestsModule).requestDM30Packets(any(), eq(0x00), eq(spn));
-        verify(obdTestsModule).requestDM30Packets(any(), eq(0x17), eq(spn));
-        verify(obdTestsModule).requestDM30Packets(any(), eq(0x21), eq(spn));
+        verify(obdTestsModule).getDM30Packets(any(), eq(0x00), eq(supportedSPN0));
+        verify(obdTestsModule).getDM30Packets(any(), eq(0x17), eq(supportedSPN17));
+        verify(obdTestsModule).getDM30Packets(any(), eq(0x21), eq(supportedSPN21));
 
         verify(vehicleInformationModule).setJ1939(j1939);
         verify(vehicleInformationModule).requestEngineHours(any());
@@ -2543,11 +2503,11 @@ public class SectionA5VerifierTest extends AbstractControllerTest {
 
         DM5DiagnosticReadinessPacket dm5Packet = mock(DM5DiagnosticReadinessPacket.class);
         DM6PendingEmissionDTCPacket dm6Packet = mock(DM6PendingEmissionDTCPacket.class);
-        when(dm6Packet.getDtcs()).thenReturn(Collections.emptyList());
+        when(dm6Packet.getDtcs()).thenReturn(List.of());
         when(dm6Packet.getMalfunctionIndicatorLampStatus()).thenReturn(LampStatus.OFF);
 
         DM12MILOnEmissionDTCPacket dm12Packet = mock(DM12MILOnEmissionDTCPacket.class);
-        when(dm12Packet.getDtcs()).thenReturn(Collections.emptyList());
+        when(dm12Packet.getDtcs()).thenReturn(List.of());
         when(dm12Packet.getMalfunctionIndicatorLampStatus()).thenReturn(LampStatus.OFF);
 
         DM20MonitorPerformanceRatioPacket dm20Packet = mock(DM20MonitorPerformanceRatioPacket.class);
@@ -2567,7 +2527,7 @@ public class SectionA5VerifierTest extends AbstractControllerTest {
         DM26TripDiagnosticReadinessPacket dm26Packet = mock(DM26TripDiagnosticReadinessPacket.class);
 
         DM28PermanentEmissionDTCPacket dm28Packet = mock(DM28PermanentEmissionDTCPacket.class);
-        when(dm28Packet.getDtcs()).thenReturn(Collections.emptyList());
+        when(dm28Packet.getDtcs()).thenReturn(List.of());
 
         DM29DtcCounts dm29Packet = mock(DM29DtcCounts.class);
         when(dm29Packet.getAllPendingDTCCount()).thenReturn(0);
@@ -2616,54 +2576,51 @@ public class SectionA5VerifierTest extends AbstractControllerTest {
         when(scaledTestResult0.getTestMaximum()).thenReturn(0xFFFF);
         when(scaledTestResult0.getTestValue()).thenReturn(0xFFFF);
         when(scaledTestResult0.getTestMinimum()).thenReturn(0xFFFF);
-        when(dm30Packet0.getTestResults()).thenReturn(Collections.singletonList(scaledTestResult0));
+        when(dm30Packet0.getTestResults()).thenReturn(List.of(scaledTestResult0));
         ScaledTestResult scaledTestResult17 = mock(ScaledTestResult.class);
         when(scaledTestResult17.getTestMaximum()).thenReturn(0xFFFF);
         when(scaledTestResult17.getTestValue()).thenReturn(0xFFFF);
         when(scaledTestResult17.getTestMinimum()).thenReturn(0xFFFF);
-        when(dm30Packet17.getTestResults()).thenReturn(Collections.singletonList(scaledTestResult17));
+        when(dm30Packet17.getTestResults()).thenReturn(List.of(scaledTestResult17));
         ScaledTestResult scaledTestResult21 = mock(ScaledTestResult.class);
         when(scaledTestResult21.getTestMaximum()).thenReturn(0xFFFF);
         when(scaledTestResult21.getTestValue()).thenReturn(0xFFFF);
         when(scaledTestResult21.getTestMinimum()).thenReturn(0xFFFF);
-        when(dm30Packet21.getTestResults()).thenReturn(Collections.singletonList(scaledTestResult21));
+        when(dm30Packet21.getTestResults()).thenReturn(List.of(scaledTestResult21));
 
         SupportedSPN supportedSPN0 = mock(SupportedSPN.class);
-        when(supportedSPN0.getSpn()).thenReturn(spn);
         SupportedSPN supportedSPN17 = mock(SupportedSPN.class);
-        when(supportedSPN17.getSpn()).thenReturn(spn);
         SupportedSPN supportedSPN21 = mock(SupportedSPN.class);
-        when(supportedSPN21.getSpn()).thenReturn(spn);
 
         OBDModuleInformation obdModuleInfo0 = mock(OBDModuleInformation.class);
-        when(obdModuleInfo0.getTestResultSpns()).thenReturn(Collections.singletonList(supportedSPN0));
+        when(obdModuleInfo0.getTestResultSpns()).thenReturn(List.of(supportedSPN0));
         OBDModuleInformation obdModuleInfo17 = mock(OBDModuleInformation.class);
-        when(obdModuleInfo17.getTestResultSpns()).thenReturn(Collections.singletonList(supportedSPN17));
+        when(obdModuleInfo17.getTestResultSpns()).thenReturn(List.of(supportedSPN17));
         OBDModuleInformation obdModuleInfo21 = mock(OBDModuleInformation.class);
-        when(obdModuleInfo21.getTestResultSpns()).thenReturn(Collections.singletonList(supportedSPN21));
+        when(obdModuleInfo21.getTestResultSpns()).thenReturn(List.of(supportedSPN21));
 
         when(dataRepository.getObdModuleAddresses()).thenReturn(obdModuleAddresses);
         when(dataRepository.getObdModule(0x00)).thenReturn(obdModuleInfo0);
         when(dataRepository.getObdModule(0x17)).thenReturn(obdModuleInfo17);
         when(dataRepository.getObdModule(0x21)).thenReturn(obdModuleInfo21);
 
-        when(diagnosticReadinessModule.requestDM5(any(), eq(true)))
-                .thenReturn(new RequestResult<>(false, Collections.singletonList(dm5Packet),
-                        Collections.emptyList()));
-        when(diagnosticReadinessModule.requestDM20(any(), eq(true)))
-                .thenReturn(new RequestResult<>(false, Collections.singletonList(dm20Packet),
-                        Collections.emptyList()));
+        when(diagnosticReadinessModule.requestDM5(any()))
+                .thenReturn(new RequestResult<>(false, List.of(dm5Packet),
+                        List.of()));
+        when(diagnosticReadinessModule.requestDM20(any()))
+                .thenReturn(new RequestResult<>(false, List.of(dm20Packet),
+                        List.of()));
 
         when(dtcModule.requestDM6(any()))
-                .thenReturn(new RequestResult<>(false, Collections.singletonList(dm6Packet),
-                        Collections.emptyList()));
-        when(dtcModule.requestDM12(any(), eq(true)))
-                .thenReturn(new RequestResult<>(false, Collections.singletonList(dm12Packet),
-                        Collections.emptyList()));
+                .thenReturn(new RequestResult<>(false, List.of(dm6Packet),
+                        List.of()));
+        when(dtcModule.requestDM12(any()))
+                .thenReturn(new RequestResult<>(false, List.of(dm12Packet),
+                        List.of()));
         when(dtcModule.requestDM21(any()))
-                .thenReturn(new RequestResult<>(false, Collections.singletonList(dm21Packet), Collections.emptyList()));
-        when(dtcModule.requestDM23(any(), eq(true)))
-                .thenReturn(new RequestResult<>(false, Collections.singletonList(dm23Packet), Collections.emptyList()));
+                .thenReturn(new RequestResult<>(false, List.of(dm21Packet), List.of()));
+        when(dtcModule.requestDM23(any()))
+                .thenReturn(new RequestResult<>(false, List.of(dm23Packet), List.of()));
         when(dtcModule.requestDM25(any(), eq(0x00)))
                 .thenReturn(
                         new BusResult<>(false, dm25Packet0));
@@ -2675,40 +2632,36 @@ public class SectionA5VerifierTest extends AbstractControllerTest {
                         new BusResult<>(false, dm25Packet21));
 
         when(dtcModule.requestDM26(any()))
-                .thenReturn(new RequestResult<>(false, Collections.singletonList(dm26Packet), Collections.emptyList()));
-        when(dtcModule.requestDM28(any(), eq(true)))
-                .thenReturn(new RequestResult<>(false, Collections.singletonList(dm28Packet), Collections.emptyList()));
+                .thenReturn(new RequestResult<>(false, List.of(dm26Packet), List.of()));
+        when(dtcModule.requestDM28(any()))
+                .thenReturn(new RequestResult<>(false, List.of(dm28Packet), List.of()));
         when(dtcModule.requestDM29(any()))
-                .thenReturn(new RequestResult<>(false, Collections.singletonList(dm29Packet), Collections.emptyList()));
+                .thenReturn(new RequestResult<>(false, List.of(dm29Packet), List.of()));
         when(dtcModule.requestDM31(any()))
-                .thenReturn(new RequestResult<>(false, Collections.singletonList(dm31Packet), Collections.emptyList()));
+                .thenReturn(new RequestResult<>(false, List.of(dm31Packet), List.of()));
         when(dtcModule.requestDM33(any(), eq(0x00))).thenReturn(
-                new RequestResult<>(false, Collections.singletonList(dm33Packet0), Collections.emptyList()));
+                new RequestResult<>(false, List.of(dm33Packet0), List.of()));
         when(dtcModule.requestDM33(any(), eq(0x17))).thenReturn(
-                new RequestResult<>(false, Collections.singletonList(dm33Packet17), Collections.emptyList()));
+                new RequestResult<>(false, List.of(dm33Packet17), List.of()));
         when(dtcModule.requestDM33(any(), eq(0x21))).thenReturn(
-                new RequestResult<>(false, Collections.singletonList(dm33Packet21), Collections.emptyList()));
+                new RequestResult<>(false, List.of(dm33Packet21), List.of()));
 
-        when(obdTestsModule.requestDM30Packets(any(), eq(0x00), eq(spn)))
-                .thenReturn(new RequestResult<>(false, Collections.singletonList(dm30Packet0),
-                        Collections.emptyList()));
-        when(obdTestsModule.requestDM30Packets(any(), eq(0x17), eq(spn)))
-                .thenReturn(new RequestResult<>(false, Collections.singletonList(dm30Packet17),
-                        Collections.emptyList()));
-        when(obdTestsModule.requestDM30Packets(any(), eq(0x21), eq(spn)))
-                .thenReturn(new RequestResult<>(false, Collections.singletonList(dm30Packet21),
-                        Collections.emptyList()));
+        when(obdTestsModule.getDM30Packets(any(), eq(0x00), eq(supportedSPN0)))
+                .thenReturn(List.of(dm30Packet0));
+        when(obdTestsModule.getDM30Packets(any(), eq(0x17), eq(supportedSPN17)))
+                .thenReturn(List.of(dm30Packet17));
+        when(obdTestsModule.getDM30Packets(any(), eq(0x21), eq(supportedSPN21)))
+                .thenReturn(List.of(dm30Packet21));
 
         when(vehicleInformationModule.requestEngineHours(any()))
-                .thenReturn(new RequestResult<>(false, Collections.singletonList(engineHoursPacket),
-                        Collections.emptyList()));
+                .thenReturn(new RequestResult<>(false, List.of(engineHoursPacket), List.of()));
 
         instance.setJ1939(j1939);
 
-        assertTrue(instance.verify(Collections.singletonList(dm28Packet),
-                Collections.singletonList(dm20Packet),
+        assertTrue(instance.verify(List.of(dm28Packet),
+                List.of(dm20Packet),
                 dm33Packets,
-                Collections.singletonList(engineHoursPacket),
+                List.of(engineHoursPacket),
                 listener));
 
         String expectedMessages = "PASS: Section A.5 Step 1.a DM6 Verfication" +
@@ -2751,19 +2704,19 @@ public class SectionA5VerifierTest extends AbstractControllerTest {
         verify(dataRepository).getObdModule(eq(0x21));
 
         verify(diagnosticReadinessModule).setJ1939(j1939);
-        verify(diagnosticReadinessModule).requestDM5(any(), eq(true));
-        verify(diagnosticReadinessModule).requestDM20(any(), eq(true));
+        verify(diagnosticReadinessModule).requestDM5(any());
+        verify(diagnosticReadinessModule).requestDM20(any());
 
         verify(dtcModule).setJ1939(j1939);
         verify(dtcModule).requestDM6(any());
-        verify(dtcModule).requestDM12(any(), eq(true));
+        verify(dtcModule).requestDM12(any());
         verify(dtcModule).requestDM21(any());
-        verify(dtcModule).requestDM23(any(), eq(true));
+        verify(dtcModule).requestDM23(any());
         verify(dtcModule).requestDM25(any(), eq(0x00));
         verify(dtcModule).requestDM25(any(), eq(0x17));
         verify(dtcModule).requestDM25(any(), eq(0x21));
         verify(dtcModule).requestDM26(any());
-        verify(dtcModule).requestDM28(any(), eq(true));
+        verify(dtcModule).requestDM28(any());
         verify(dtcModule).requestDM29(any());
         verify(dtcModule).requestDM31(any());
         verify(dtcModule).requestDM33(any(), eq(0x00));
@@ -2771,9 +2724,9 @@ public class SectionA5VerifierTest extends AbstractControllerTest {
         verify(dtcModule).requestDM33(any(), eq(0x21));
 
         verify(obdTestsModule).setJ1939(j1939);
-        verify(obdTestsModule).requestDM30Packets(any(), eq(0x00), eq(spn));
-        verify(obdTestsModule).requestDM30Packets(any(), eq(0x17), eq(spn));
-        verify(obdTestsModule).requestDM30Packets(any(), eq(0x21), eq(spn));
+        verify(obdTestsModule).getDM30Packets(any(), eq(0x00), eq(supportedSPN0));
+        verify(obdTestsModule).getDM30Packets(any(), eq(0x17), eq(supportedSPN17));
+        verify(obdTestsModule).getDM30Packets(any(), eq(0x21), eq(supportedSPN21));
 
         verify(vehicleInformationModule).setJ1939(j1939);
         verify(vehicleInformationModule).requestEngineHours(any());
@@ -2795,11 +2748,11 @@ public class SectionA5VerifierTest extends AbstractControllerTest {
 
         DM5DiagnosticReadinessPacket dm5Packet = mock(DM5DiagnosticReadinessPacket.class);
         DM6PendingEmissionDTCPacket dm6Packet = mock(DM6PendingEmissionDTCPacket.class);
-        when(dm6Packet.getDtcs()).thenReturn(Collections.emptyList());
+        when(dm6Packet.getDtcs()).thenReturn(List.of());
         when(dm6Packet.getMalfunctionIndicatorLampStatus()).thenReturn(LampStatus.OFF);
 
         DM12MILOnEmissionDTCPacket dm12Packet = mock(DM12MILOnEmissionDTCPacket.class);
-        when(dm12Packet.getDtcs()).thenReturn(Collections.emptyList());
+        when(dm12Packet.getDtcs()).thenReturn(List.of());
         when(dm12Packet.getMalfunctionIndicatorLampStatus()).thenReturn(LampStatus.OFF);
 
         DM20MonitorPerformanceRatioPacket dm20Packet = mock(DM20MonitorPerformanceRatioPacket.class);
@@ -2819,7 +2772,7 @@ public class SectionA5VerifierTest extends AbstractControllerTest {
         DM26TripDiagnosticReadinessPacket dm26Packet = mock(DM26TripDiagnosticReadinessPacket.class);
 
         DM28PermanentEmissionDTCPacket dm28Packet = mock(DM28PermanentEmissionDTCPacket.class);
-        when(dm28Packet.getDtcs()).thenReturn(Collections.emptyList());
+        when(dm28Packet.getDtcs()).thenReturn(List.of());
 
         DM29DtcCounts dm29Packet = mock(DM29DtcCounts.class);
         when(dm29Packet.getAllPendingDTCCount()).thenReturn(0);
@@ -2868,41 +2821,39 @@ public class SectionA5VerifierTest extends AbstractControllerTest {
         Integer spn = 157;
 
         SupportedSPN supportedSPN0 = mock(SupportedSPN.class);
-        when(supportedSPN0.getSpn()).thenReturn(spn);
         SupportedSPN supportedSPN17 = mock(SupportedSPN.class);
-        when(supportedSPN17.getSpn()).thenReturn(spn);
+
         SupportedSPN supportedSPN21 = mock(SupportedSPN.class);
-        when(supportedSPN21.getSpn()).thenReturn(spn);
 
         OBDModuleInformation obdModuleInfo0 = mock(OBDModuleInformation.class);
-        when(obdModuleInfo0.getTestResultSpns()).thenReturn(Collections.singletonList(supportedSPN0));
+        when(obdModuleInfo0.getTestResultSpns()).thenReturn(List.of(supportedSPN0));
         OBDModuleInformation obdModuleInfo17 = mock(OBDModuleInformation.class);
-        when(obdModuleInfo17.getTestResultSpns()).thenReturn(Collections.singletonList(supportedSPN17));
+        when(obdModuleInfo17.getTestResultSpns()).thenReturn(List.of(supportedSPN17));
         OBDModuleInformation obdModuleInfo21 = mock(OBDModuleInformation.class);
-        when(obdModuleInfo21.getTestResultSpns()).thenReturn(Collections.singletonList(supportedSPN21));
+        when(obdModuleInfo21.getTestResultSpns()).thenReturn(List.of(supportedSPN21));
 
         when(dataRepository.getObdModuleAddresses()).thenReturn(obdModuleAddresses);
         when(dataRepository.getObdModule(0x00)).thenReturn(obdModuleInfo0);
         when(dataRepository.getObdModule(0x17)).thenReturn(obdModuleInfo17);
         when(dataRepository.getObdModule(0x21)).thenReturn(obdModuleInfo21);
 
-        when(diagnosticReadinessModule.requestDM5(any(), eq(true)))
-                .thenReturn(new RequestResult<>(false, Collections.singletonList(dm5Packet),
-                        Collections.emptyList()));
-        when(diagnosticReadinessModule.requestDM20(any(), eq(true)))
-                .thenReturn(new RequestResult<>(false, Collections.singletonList(dm20Packet),
-                        Collections.emptyList()));
+        when(diagnosticReadinessModule.requestDM5(any()))
+                .thenReturn(new RequestResult<>(false, List.of(dm5Packet),
+                        List.of()));
+        when(diagnosticReadinessModule.requestDM20(any()))
+                .thenReturn(new RequestResult<>(false, List.of(dm20Packet),
+                        List.of()));
 
         when(dtcModule.requestDM6(any()))
-                .thenReturn(new RequestResult<>(false, Collections.singletonList(dm6Packet),
-                        Collections.emptyList()));
-        when(dtcModule.requestDM12(any(), eq(true)))
-                .thenReturn(new RequestResult<>(false, Collections.singletonList(dm12Packet),
-                        Collections.emptyList()));
+                .thenReturn(new RequestResult<>(false, List.of(dm6Packet),
+                        List.of()));
+        when(dtcModule.requestDM12(any()))
+                .thenReturn(new RequestResult<>(false, List.of(dm12Packet),
+                        List.of()));
         when(dtcModule.requestDM21(any()))
-                .thenReturn(new RequestResult<>(false, Collections.singletonList(dm21Packet), Collections.emptyList()));
-        when(dtcModule.requestDM23(any(), eq(true)))
-                .thenReturn(new RequestResult<>(false, Collections.singletonList(dm23Packet), Collections.emptyList()));
+                .thenReturn(new RequestResult<>(false, List.of(dm21Packet), List.of()));
+        when(dtcModule.requestDM23(any()))
+                .thenReturn(new RequestResult<>(false, List.of(dm23Packet), List.of()));
         when(dtcModule.requestDM25(any(), eq(0x00)))
                 .thenReturn(
                         new BusResult<>(false, dm25Packet0));
@@ -2914,40 +2865,37 @@ public class SectionA5VerifierTest extends AbstractControllerTest {
                         new BusResult<>(false, dm25Packet21));
 
         when(dtcModule.requestDM26(any()))
-                .thenReturn(new RequestResult<>(false, Collections.singletonList(dm26Packet), Collections.emptyList()));
-        when(dtcModule.requestDM28(any(), eq(true)))
-                .thenReturn(new RequestResult<>(false, Collections.singletonList(dm28Packet), Collections.emptyList()));
+                .thenReturn(new RequestResult<>(false, List.of(dm26Packet), List.of()));
+        when(dtcModule.requestDM28(any()))
+                .thenReturn(new RequestResult<>(false, List.of(dm28Packet), List.of()));
         when(dtcModule.requestDM29(any()))
-                .thenReturn(new RequestResult<>(false, Collections.singletonList(dm29Packet), Collections.emptyList()));
+                .thenReturn(new RequestResult<>(false, List.of(dm29Packet), List.of()));
         when(dtcModule.requestDM31(any()))
-                .thenReturn(new RequestResult<>(false, Collections.singletonList(dm31Packet), Collections.emptyList()));
+                .thenReturn(new RequestResult<>(false, List.of(dm31Packet), List.of()));
         when(dtcModule.requestDM33(any(), eq(0x00))).thenReturn(
-                new RequestResult<>(false, Collections.singletonList(dm33Packet0), Collections.emptyList()));
+                new RequestResult<>(false, List.of(dm33Packet0), List.of()));
         when(dtcModule.requestDM33(any(), eq(0x17))).thenReturn(
-                new RequestResult<>(false, Collections.singletonList(dm33Packet17), Collections.emptyList()));
+                new RequestResult<>(false, List.of(dm33Packet17), List.of()));
         when(dtcModule.requestDM33(any(), eq(0x21))).thenReturn(
-                new RequestResult<>(false, Collections.singletonList(dm33Packet21), Collections.emptyList()));
+                new RequestResult<>(false, List.of(dm33Packet21), List.of()));
 
-        when(obdTestsModule.requestDM30Packets(any(), eq(0x00), eq(spn)))
-                .thenReturn(new RequestResult<>(false, Collections.singletonList(dm30Packet0),
-                        Collections.emptyList()));
-        when(obdTestsModule.requestDM30Packets(any(), eq(0x17), eq(spn)))
-                .thenReturn(new RequestResult<>(false, Collections.singletonList(dm30Packet17),
-                        Collections.emptyList()));
-        when(obdTestsModule.requestDM30Packets(any(), eq(0x21), eq(spn)))
-                .thenReturn(new RequestResult<>(false, Collections.singletonList(dm30Packet21),
-                        Collections.emptyList()));
+        when(obdTestsModule.getDM30Packets(any(), eq(0x00), eq(supportedSPN0)))
+                .thenReturn(List.of(dm30Packet0));
+        when(obdTestsModule.getDM30Packets(any(), eq(0x17), eq(supportedSPN17)))
+                .thenReturn(List.of(dm30Packet17));
+        when(obdTestsModule.getDM30Packets(any(), eq(0x21), eq(supportedSPN21)))
+                .thenReturn(List.of(dm30Packet21));
 
         when(vehicleInformationModule.requestEngineHours(any()))
-                .thenReturn(new RequestResult<>(false, Collections.singletonList(engineHoursPacket),
-                        Collections.emptyList()));
+                .thenReturn(new RequestResult<>(false, List.of(engineHoursPacket),
+                        List.of()));
 
         instance.setJ1939(j1939);
 
-        assertTrue(instance.verify(Collections.singletonList(dm28Packet),
-                Collections.singletonList(dm20Packet),
+        assertTrue(instance.verify(List.of(dm28Packet),
+                List.of(dm20Packet),
                 dm33Packets,
-                Collections.singletonList(engineHoursPacket),
+                List.of(engineHoursPacket),
                 listener));
 
         String expectedMessages = "PASS: Section A.5 Step 1.a DM6 Verfication" +
@@ -2990,19 +2938,19 @@ public class SectionA5VerifierTest extends AbstractControllerTest {
         verify(dataRepository).getObdModule(eq(0x21));
 
         verify(diagnosticReadinessModule).setJ1939(j1939);
-        verify(diagnosticReadinessModule).requestDM5(any(), eq(true));
-        verify(diagnosticReadinessModule).requestDM20(any(), eq(true));
+        verify(diagnosticReadinessModule).requestDM5(any());
+        verify(diagnosticReadinessModule).requestDM20(any());
 
         verify(dtcModule).setJ1939(j1939);
         verify(dtcModule).requestDM6(any());
-        verify(dtcModule).requestDM12(any(), eq(true));
+        verify(dtcModule).requestDM12(any());
         verify(dtcModule).requestDM21(any());
-        verify(dtcModule).requestDM23(any(), eq(true));
+        verify(dtcModule).requestDM23(any());
         verify(dtcModule).requestDM25(any(), eq(0x00));
         verify(dtcModule).requestDM25(any(), eq(0x17));
         verify(dtcModule).requestDM25(any(), eq(0x21));
         verify(dtcModule).requestDM26(any());
-        verify(dtcModule).requestDM28(any(), eq(true));
+        verify(dtcModule).requestDM28(any());
         verify(dtcModule).requestDM29(any());
         verify(dtcModule).requestDM31(any());
         verify(dtcModule).requestDM33(any(), eq(0x00));
@@ -3010,9 +2958,9 @@ public class SectionA5VerifierTest extends AbstractControllerTest {
         verify(dtcModule).requestDM33(any(), eq(0x21));
 
         verify(obdTestsModule).setJ1939(j1939);
-        verify(obdTestsModule).requestDM30Packets(any(), eq(0x00), eq(spn));
-        verify(obdTestsModule).requestDM30Packets(any(), eq(0x17), eq(spn));
-        verify(obdTestsModule).requestDM30Packets(any(), eq(0x21), eq(spn));
+        verify(obdTestsModule).getDM30Packets(any(), eq(0x00), eq(supportedSPN0));
+        verify(obdTestsModule).getDM30Packets(any(), eq(0x17), eq(supportedSPN17));
+        verify(obdTestsModule).getDM30Packets(any(), eq(0x21), eq(supportedSPN21));
 
         verify(vehicleInformationModule).setJ1939(j1939);
         verify(vehicleInformationModule).requestEngineHours(any());
